# RoVi

./: .gitignore  README.md
RX60Controller/: CMakeLists.txt  manifest.xml
RX60Controller/.svn/: wc.db
RX60Controller/launch/: rx60_controller.launch
RX60Controller/src/rx60_controller/: RX60Driver.cpp  RX60TCPSocket.hpp  rx60_controller_node.cpp
RX60_wrapper/: CMakeLists.txt
RX60_wrapper/src/: RX60wrapper.hpp  main.cpp
RX60_wrapper/srv/: command.srv
calibration/: CMakeLists.txt  package.xml
calibration/scripts/: calibration_node.py
calibration/src/: calibration_node.cpp
group4_msgs/: CMakeLists.txt  package.xml
group4_msgs/msg/: PointCloudPose.msg
modelling/model_launch/: CMakeLists.txt  package.xml
modelling/model_launch/launch/: camera.launch
modelling/modelling_launch/: CMakeLists.txt  package.xml
modelling/modelling_launch/launch/: calibration.launch  dev.launch
modelling/point_cloud_assembler/: CMakeLists.txt  package.xml
modelling/point_cloud_assembler/launch/: point_cloud_assembler.launch
modelling/point_cloud_assembler/src/: MyPointNormal.cpp  MyPointNormal.hpp  PointCloudAssembler.cpp  PointCloudAssembler.hpp  PointCloudFilter.cpp  PointCloudFilter.hpp  PointCloudStitching.cpp  PointCloudStitching.hpp  calibration.cpp  calibration.hpp  point_cloud_assembler.cpp  point_cloud_assembler.h  point_cloud_assembler.hpp  point_cloud_cutoff.cpp  point_cloud_cutoff.h
modelling/point_cloud_modelling/: CMakeLists.txt  package.xml
modelling/point_cloud_to_surface_test/: package.xml
modelling/point_cloud_to_surface_test/src/: PointCloudToSurface.cpp  PointCloudToSurface.h
modelling/surface_reconstruction/: CMakeLists.txt  package.xml
modelling/surface_reconstruction/src/: Reconstruction.cpp  Reconstruction.hpp  SurfaceReconstruction.cpp  SurfaceReconstruction.hpp
point_cloud_to_surface/: CMakeLists.txt
point_cloud_to_surface/launch/: test_launch.launch
point_cloud_to_surface/src/: PointCloudToSurface.cpp  PointCloudToSurface.h
rx60_wrapper/: CMakeLists.txt  package.xml
rx60_wrapper/include/rx60_wrapper/: RX60wrapper.hpp
rx60_wrapper/src/: RX60wrapper.cpp  RX60wrapper.hpp  main.cpp
rx60b_bringup/: CMakeLists.txt  package.xml
rx60b_bringup/launch/: online_tf.launch  robot.launch
rx60b_description/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
rx60b_description/launch/: display.launch  gazebo.launch
rx60b_description/meshes/: arm.STL  base_link.STL  base_link.stl  elbow.STL  elbow.stl  forearm.STL  powerconnector.stl  shoulder.STL  tool_boundingbox.stl  tool_visual.stl  wrist.STL  wrist.stl
rx60b_description/meshes_rob/: arm.stl  forearm.stl  shoulder.stl  tool_flange.stl
rx60b_description/robots/: rx60b_description.URDF  rx60b_description_org.URDF  rx60b_description_rob.URDF
rx60b_hardware/: CMakeLists.txt  package.xml
rx60b_hardware/config/: controllers.yaml
rx60b_hardware/launch/: rx60b_controller.launch  testcontroller.launch
rx60b_hardware/src/: RX60wrapper.cpp  RX60wrapper.hpp  hardware.cpp
rx60b_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rx60b_moveit_config/config/: RX60B-HB_5.srdf  fake_controllers.yaml  joint_limits.yaml
rx60b_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
rx60b_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
rx60b_moveit_config2/config/: RX60B-HB_5.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
rx60b_moveit_config2/launch/: RX60B-HB_5_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
simple_pose_mission/: CMakeLists.txt  package.xml
simple_pose_mission/src/: marker_pose.cpp  marker_pose.h  simple_pose_mission_node.cpp
stereo_get_images/: CMakeLists.txt  package.xml  setup.py
stereo_get_images/src/: stereo_get_images.py
