<?xml version="1.0"?>
<package>
  <name>modelling_launch</name>
  <version>0.0.0</version>
  <description>The modelling_launch package</description>
  <maintainer email="kent.stark.olsen@gmail.com">Kent Stark Olsen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>