<?xml version="1.0"?>
<package>
  <name>point_cloud_assembler</name>
  <version>0.0.0</version>
  <description>The point_cloud_assembler package</description>
  <maintainer email="kent.stark.olsen@gmail.com">Kent Stark Olsen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
