<?xml version="1.0"?>
<package>
  <name>surface_reconstruction</name>
  <version>0.0.0</version>
  <description>The surface_reconstruction package</description>
  <maintainer email="kent.stark.olsen@gmail.com">Kent Stark Olsen</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>